Fixed a bunch of styling and added collapsable modules for pretty much everything

--- a/index.css
+++ b/index.css
@@ -1,9 +1,11 @@
 /******************* Demo Page Styling *********************/
+/* make page title thicker font */
 h1 {
   font-size: 36px;
   font-weight: bold;
 }
 
+/* make section titles thicker font */
 h2 {
   margin-bottom: 5px;
   margin-top: 5px;
@@ -11,6 +13,15 @@ h2 {
   font-weight: bold;
 }
 
+/* padding-top to buffer for navbar */
+/* default text font size and weight */
+body {
+  padding-top: 50px;
+  font-family: sans-serif;
+  font-size: 12px;
+}
+
+/* description text should have normal styles */
 p {
   margin-top: 5px;
   font-size: 12px;
@@ -18,16 +29,15 @@ p {
   font-weight: normal;
 }
 
-body {
-  font-family: sans-serif;
-  padding-top: 100px;
-  font-size: 12px;
+/* add line spacers between each tree setting, leave out top */
+tbody>tr>td {
+  border-top: 0px !important;
+}
+tbody>tr:not(:first-child) {
+  border-top: 1px solid #ddd !important;
 }
 
-li>a {
-  font-size: 16px;
-}
-
+/* for larger widths, font sizes scale with width */
 @media (min-width: 1180px) {
   h1 {
     font-size: 3vw;
@@ -45,17 +55,8 @@ li>a {
   }
 
 }
-.col-xs-12 > .header-with-desc {
-  min-height: 80px;
-}
 
-@media (min-width: 768px) {
-  body {
-    padding-top: 50px;
-  }
-}
-
-/* Make button clickable link take up full H/W of top navbar */
+/* Make clickable area of nav button take up the full H & W of view */
 .navbar .container {
   padding: 0px;
   margin: 0px;
@@ -85,14 +86,7 @@ li>a {
 }
 /********************/
 
-
-.main-container {
-    display: -webkit-flex;
-    display: flex;
-    -webkit-flex-flow: row wrap;
-    flex-flow: row wrap;
-}
-
+/* max-width and centering for large viewports */
 @media (min-width: 1000px) {
   .main-container {
     width: 1000px;
@@ -109,6 +103,7 @@ li>a {
   box-sizing: border-box;
 }
 
+/* Set cursor to pointer for span used to add class input rows */
 .add-row-button {
   font-size: 12px;
   cursor: pointer;
@@ -121,10 +116,11 @@ li>a {
   user-select: none;
 }
 
+/* Make list of text inputs a raw list of elements with no styling */
 .option-list {
   list-style-type: none;
-  padding: 0px;
-  margin: 0px;
+  padding: 0;
+  margin: 0;
 }
 
 .option-list-item {
@@ -136,12 +132,22 @@ li>a {
   min-height: 50px;
 }
 
+/* Make cursor a pointer on entirety of collapsable panel headings */
 .panel-heading {
     cursor: pointer;
 }
 
 .code-container {
   overflow-wrap: break-word;
+}
+
+.main-container {
+  display: flex;
+  flex-flow: row wrap;
+
+  display: -webkit-flex;
+  -webkit-flex-flow: row wrap;
+  
 }
 
 
